# OpenGL-GUI

./: .gitignore  CMakeLists.txt  README.md  build.bat  prog.trace
include/: App.hpp  Background.hpp  CameraManager.hpp  GLShader.hpp  Input.hpp  Interface.hpp  Renderer.hpp  ShaderLoader.hpp  Widget.hpp  Window.hpp
include/Base/: Camera.hpp  Shader.hpp  Shape.hpp  WidgetData.hpp  WindowData.hpp
include/Factories/: GLFactory.hpp  ShapeFactory.hpp
include/Time/: Clock.hpp  ScopedTimer.hpp  Timer.hpp
include/Util/: BinaryIO.hpp  GLHelper.hpp
shaders/: default_fragment.glsl  default_vertex.glsl
src/: App.cpp  Background.cpp  CameraManager.cpp  GLShader.cpp  Input.cpp  Interface.cpp  Renderer.cpp  ShaderLoader.cpp  Widget.cpp  Window.cpp  main.cpp
src/Factories/: GLFactory.cpp  ShapeFactory.cpp
src/Time/: Clock.cpp  ScopedTimer.cpp  Timer.cpp
src/Util/: BinaryIO.cpp  GLHelper.cpp
